Fixing nag alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -260,7 +260,7 @@ button:hover {
 .right-position {
   position: absolute;
   right: 0;
-  top: 6px;
+  top: 4px;
 }
 
 .Screen-sizing {
